--- a/app/src/main/res/layout-land/screen_main.xml
+++ b/app/src/main/res/layout-land/screen_main.xml
@@ -1,57 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <Spinner
         android:id="@+id/first_algorithm_spinner"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/second_algorithm_spinner"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/first_algorithm_image"
-        android:layout_width="360dp"
+        android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/second_algorithm_image"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/first_algorithm_spinner" />
 
     <Spinner
         android:id="@+id/second_algorithm_spinner"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/first_algorithm_image" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/first_algorithm_spinner"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/second_algorithm_image"
-        android:layout_width="360dp"
+        android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/first_algorithm_image"
         app:layout_constraintTop_toBottomOf="@+id/second_algorithm_spinner" />
 
     <Button
@@ -59,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:text="Size"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -72,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="8dp"
         android:text="Generate"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -82,19 +83,12 @@
 
     <SeekBar
         android:id="@+id/speed_seekbar"
-        android:layout_width="0dp"
-        android:layout_height="22dp"
-        android:layout_marginBottom="28dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
         android:max="100"
-        android:maxHeight="3dp"
-        android:minHeight="3dp"
-        android:progress="60"
-        android:progressDrawable="@drawable/ic_control"
-        android:thumbTint="#000000"
+        android:progress="100"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/_textView2" />
 
     <TextView
@@ -102,9 +96,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="32dp"
         android:text="Speed"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/generate_noise_button" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
